Contact page redesigned

--- a/index.html
+++ b/index.html
@@ -15,39 +15,28 @@
 
 <body>
 
-  <div class="container">
+  <div class="index-container">
     <div class="col-12 side-bar">
-      <!--
-      <div class="logo">
-        <img src="favicon.png">
-      </div> -->
+
       <div class="nav-icon">
-        <svg viewBox="0 0 57 28" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <!-- Generator: Sketch 45.2 (43514) - http://www.bohemiancoding.com/sketch -->
+        <svg viewBox="0 0 48 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <!-- Generator: Sketch 46 (44423) - http://www.bohemiancoding.com/sketch -->
     <desc>Created with Sketch.</desc>
     <defs></defs>
     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="square">
-        <g id="resume-page" transform="translate(-1304.000000, -74.000000)" stroke="#979797" stroke-width="3">
-            <path d="M1306,75.5 L1359,75.5" id="Line"></path>
-            <path d="M1306,87.5 L1359,87.5" id="Line"></path>
-            <path d="M1306,100.5 L1359,100.5" id="Line"></path>
+        <g id="Desktop-HD-Copy" transform="translate(-1335.000000, -1093.000000)" stroke="#627077" stroke-width="3">
+            <g id="Group-2" transform="translate(1337.000000, 1093.000000)">
+                <path d="M0,1.5 L43.9465743,1.5" id="Line"></path>
+                <path d="M0,12.5 L43.9465743,12.5" id="Line"></path>
+                <path d="M0,23.5 L43.9465743,23.5" id="Line"></path>
+            </g>
         </g>
     </g>
 </svg>
+        <!-- nav-icon-->
       </div>
-      <!--
-      <div class="nav-icon">
-        <svg viewBox="0 0 48 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-              <g id="Desktop-HD-Copy" transform="translate(-1341.000000, -55.000000)" stroke="#627077" stroke-width="3">
-                  <g id="Group-2" transform="translate(1343.000000, 55.000000)">
-                      <path d="M0,1.5 L43.9465743,1.5" id="Line1"></path>
-                      <path d="M0,12.5 L43.9465743,12.5" id="Line2"></path>
-                      <path d="M0,23.5 L43.9465743,23.5" id="Line3"></path>
-                  </g>
-              </g>
-      </svg>
-      </div>-->
 
+      <!-- side-bar-->
     </div>
 
     <div class="menu">
@@ -59,13 +48,13 @@
           <li class="resume-page"><a href="/resume-page.html">résumé</a></li>
         </div>
       </div>
+      <!-- menu-->
     </div>
 
     <div class="home-page">
       <div class="hello heading-font">hello</div>
-      <a name="home"></a>
 
-      <div class="row">
+      <div class="row" id="home">
         <div class="col-6 title-container">
           <div class="heading-font title">joanitha</div>
           <div class="heading-font title">christle</div>
@@ -86,10 +75,10 @@
           </div>
         </div>
       </div>
+      <!-- homepage-->
     </div>
 
-    <a name="work "></a>
-    <div class="row work-container ">
+    <div class="row work-container " id="work">
 
       <div class="row mywork heading-font title ">i worked on</div>
 
@@ -116,8 +105,7 @@
       <div class="row work02 ">
         <div class="number two heading-font ">02</div>
 
-        <div class="col-3">
-        </div>
+        <div class="col-3"></div>
         <div class="col-9 ">
           <h2 class="work-title heading-font ">CALENDAR APPLICATION<h2>
               <h3 class="work-title work-place heading-font ">Course: Object-Oriented Design<h3>
@@ -173,10 +161,11 @@
               <p class="footer work-description ">Used: Model-View-Controller pattern,<br> GUI programming skills and Java</p>
             </div>
           </div>
+
+          <!-- work-container-->
         </div>
 
-        <a name="contact "></a>
-        <div class="contact-page ">
+        <div class="contact-page " id="contact">
         <div class="row contact-title ">
           <div class="contact heading-font title ">say hello</div>
         </div>
@@ -186,24 +175,45 @@
             please feel free to contact me!</p>
           </h4>
         </div>
-        <div class="row links ">
-          <a class =" heading-font " href="/resume-page.html ">résumé</a>
-          <a class=" heading-font " href="mailto:joanitha.gomez@sjsu.edu ">email</a>
-          <a class =" heading-font " target="github " href="https://github.com/joanithagomez ">github</a>
-          <a class =" heading-font "  target="linkedin " href="https://www.linkedin.com/in/joanitha-christle-gomez ">linkedin</a>
+
+      <div class="row send-button">
+        <a class="button heading-font" href="mailto:joanitha.gomez@sjsu.edu">
+          <div class="svg-container">
 
 
-      <!-- <a href="# " class="email-link ">email</a>
-          <a href="# " class="github ">github</a>
-          <a href="# " class="linkedin ">linkedin</a>
-          <a href="# " class="instagram ">instagram</a> -->
+          <svg viewBox="0 0 289 289" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <!-- Generator: Sketch 46 (44423) - http://www.bohemiancoding.com/sketch -->
+              <desc>Created with Sketch.</desc>
+              <defs></defs>
+              <g id="Page-1" stroke="none" stroke-width="1" >
+                  <g id="if_send_1608828">
+                      <path d="M284.496866,1.77399554 C288.04479,4.35435268 289.496213,7.79482887 288.851136,12.0954241 L247.566209,259.80971 C247.028645,262.927641 245.30844,265.346726 242.405594,267.066964 C240.900414,267.927083 239.233965,268.357143 237.406247,268.357143 C236.223606,268.357143 234.933452,268.088356 233.535785,267.550781 L160.480817,237.715402 L121.45366,285.290737 C119.518429,287.763579 116.884365,289 113.551467,289 C112.1538,289 110.971159,288.78497 110.003544,288.354911 C107.9608,287.602307 106.321229,286.339007 105.084832,284.565011 C103.848434,282.791016 103.230235,280.828869 103.230235,278.678571 L103.230235,222.394531 L242.566863,51.6071429 L70.1700403,200.78404 L6.46868859,174.657924 C2.49071389,173.152716 0.340457294,170.196057 0.017918805,165.787946 C-0.197106855,161.487351 1.52309842,158.315662 5.17853464,156.272879 L273.530558,1.45145089 C275.14325,0.483816964 276.863456,0 278.691174,0 C280.84143,0 282.776661,0.591331845 284.496866,1.77399554 Z" id="Shape"></path>
+                  </g>
+              </g>
+          </svg>
+          <!-- svg-container -->
         </div>
-
+        </a>
+      </div>
+        <!-- contact-page-->
       </div>
 
-      <div class="page-footer-container ">
-        <h4 class="made-by ">made by joanitha</h4>
-      </div>
+</div> <!-- container -->
 
-</div>
+<div class="site-footer">
+  <div class="row link-container ">
+    <div class="links">
+      <a class =" heading-font " href="/resume-page.html ">résumé</a>
+      <span class="dash"> - </span>
+      <a class =" heading-font " target="github " href="https://github.com/joanithagomez ">github</a>
+      <span class="dash"> - </span>
+
+      <a class =" heading-font "  target="linkedin " href="https://www.linkedin.com/in/joanitha-christle-gomez ">linkedin</a>
+    </div>
+    </div>
+      <div class="made-by-container">
+      <div class="made-by ">Handcrafted by Joanitha</div>
+    </div>
+  </div>
+
 </body>
