--- a/resume-page.html
+++ b/resume-page.html
@@ -13,26 +13,32 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="resume-container">
 
     <div class="nav-icon">
-      <svg viewBox="0 0 57 28" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+
+      <svg viewBox="0 0 48 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <!-- Generator: Sketch 46 (44423) - http://www.bohemiancoding.com/sketch -->
+        <desc>Created with Sketch.</desc>
+        <defs></defs>
         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="square">
-          <g id="resume-page" transform="translate(-1304.000000, -74.000000)" stroke="#979797" stroke-width="3">
-            <path d="M1306,75.5 L1359,75.5" id="Line"></path>
-            <path d="M1306,87.5 L1359,87.5" id="Line"></path>
-            <path d="M1306,100.5 L1359,100.5" id="Line"></path>
+          <g id="Desktop-HD-Copy" transform="translate(-1335.000000, -1093.000000)" stroke="#627077" stroke-width="3">
+            <g id="Group-2" transform="translate(1337.000000, 1093.000000)">
+              <path d="M0,1.5 L43.9465743,1.5" id="Line"></path>
+              <path d="M0,12.5 L43.9465743,12.5" id="Line"></path>
+              <path d="M0,23.5 L43.9465743,23.5" id="Line"></path>
+            </g>
           </g>
         </g>
-      </svg>
+        </svg>
     </div>
 
     <div class="menu">
       <div class="menu-overlay">
         <div class="menu-items">
-          <li class="home"><a href="/index.html#home">home</a></li>
-          <li class="work"><a href="/index.html#work">work</a></li>
-          <li class="say-hello"><a href="/index.html#contact">contact</a></li>
+          <li class="home"><a href="#home">home</a></li>
+          <li class="work"><a href="#work">work</a></li>
+          <li class="say-hello"><a href="#contact">contact</a></li>
         </div>
       </div>
     </div>
@@ -179,8 +185,4 @@
     </div>
     <!-- container -->
   </div>
-</body>
-</div>
-</body>
-</div>
 </body>
