--- a/resume-page.html
+++ b/resume-page.html
@@ -37,9 +37,8 @@
       <div class="menu-overlay">
         <div class="menu-items">
           <li class="home"><a href="/#home">home</a></li>
-          <li class="work"><a href="/index.html#work">work</a></li>
+          <li class="work"><a href="/#work">work</a></li>
           <li class="say-hello"><a href="/#contact">contact</a></li>
-          <li class="say-hello"><a href="https://joanithagomez.github.io/index.html#contact">contact2</a></li>
         </div>
       </div>
     </div>
