--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <div class="intro">
                 <div class="hello"> <span class="muted-text">Hi, I'm </span></div>
                 <div class="name">Joanitha Christle.</div>
-                <p class="introtext">Front end Developer</p>
+                <p class="introtext">Front-end Developer</p>
               </div>
             </div>
             </div>
@@ -108,7 +108,7 @@
                         </div>
                         
                      </div>
-                     <!-- skills -->
+                     <!-- about -->
                   </div> 
 
 
@@ -117,9 +117,9 @@
             <div class="text-center">
               <div class="title">Portfolio</div>
             </div>
-            <div class="container grid">
-              <div class="row customrow">
-                <div class="col-sm-4 portfolio-item "  data-toggle="modal" data-target="#logApp"><img src="images/img.jpg" class="image img-responsive" alt>
+            <div class="grid">
+              <div class="row">
+                <div class="col-md-4 portfolio-item "  data-toggle="modal" data-target="#logApp"><img src="images/img.jpg" class="image img-responsive" alt>
 
                   <div class="filter">
 
@@ -134,7 +134,7 @@
                       </div>
                   </div>
 
-                  <div class="col-sm-4 portfolio-item"  data-toggle="modal" data-target="#its"><img src="images/img.jpg" class="image img-responsive" alt>
+                  <div class="col-md-4 portfolio-item"  data-toggle="modal" data-target="#its"><img src="images/img.jpg" class="image img-responsive" alt>
                     <div class="filter">
 
                       <div class="mask">
@@ -148,7 +148,7 @@
                       </div>
 
                     </div>
-                    <div class="col-sm-4 portfolio-item"  data-toggle="modal" data-target="#boxbreathing"><img src="images/img.jpg" class="image img-responsive" alt>
+                    <div class="col-md-4 portfolio-item"  data-toggle="modal" data-target="#boxbreathing"><img src="images/img.jpg" class="image img-responsive" alt>
                       <div class="filter">
 
                       <div class="mask">
@@ -161,12 +161,12 @@
                           </div>
                         </div>
                       </div>
-              </div>
+              <!-- </div> -->
 
 
 
-              <div class="row customrow">
-                <div class="col-sm-4 portfolio-item"  data-toggle="modal" data-target="#blog"><img src="images/img.jpg" class="image img-responsive" alt>
+              <!-- <div class="row "> -->
+                <div class="col-md-4 portfolio-item"  data-toggle="modal" data-target="#blog"><img src="images/img.jpg" class="image img-responsive" alt>
                   <div class="filter">
 
                   <div class="mask">
@@ -180,7 +180,7 @@
 
                     </div>
                   </div>
-                  <div class="col-sm-4 portfolio-item "  data-toggle="modal" data-target="#timer"><img src="images/img.jpg" class="image img-responsive" alt>
+                  <div class="col-md-4 portfolio-item "  data-toggle="modal" data-target="#timer"><img src="images/img.jpg" class="image img-responsive" alt>
                     <div class="filter">
 
                     <div class="mask">
@@ -193,7 +193,7 @@
                       </div>
                     </div>
                   </div>
-                    <div class="col-sm-4 portfolio-item"  data-toggle="modal" data-target="#mancala"><img src="images/img.jpg" class="image img-responsive" alt>
+                    <div class="col-md-4 portfolio-item"  data-toggle="modal" data-target="#mancala"><img src="images/img.jpg" class="image img-responsive" alt>
                       <div class="filter">
 
                       <div class="mask">
