--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       </div>
       <div class="footer">
           <div class="text-center">
-            <div class="handmade">Handmade by Joanitha Christle Gomez</div>
+            <div class="handmade">Handmade by <span><a href="#aboutme">Joanitha Christle Gomez</a></span></div>
           <div class="tools">HTML5 | CSS3 | JavaScript | Bootstrap</div>
         </div>
       </div>
