--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
         </section>
 
         <div class="row text-center">
-          <button class="btn btn-default">Download Résumé</button>
+
+          <button class="btn btn-default" onclick="window.open('Joanitha-Resume.pdf')">Download Résumé</button>
         </div>
 
       </div>
