--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Joanitha Christle | Developer</title>
 
-  <link rel="icon" href="images/jc.png" />
+  <link rel="icon" href="images/headshot.jpeg" />
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Lato:300,400,700,900" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
