--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="intro">
               <div class="hello"><span class="muted-text">Hi, I'm </span></div>
               <div class="name">Joanitha Christle.</div>
-              <p class="introtext">Front-end Developer</p>
+              <p class="introtext">Front end Developer and CS Major</p>
             </div>
           </div>
         </div>
@@ -73,7 +73,7 @@
           <div class="col-md-6 right">
             <div class="info-box">
               <div class="info-title">Skills</div>
-              <div class="info-desc">JavaScript, React.js, React Native, HTML5, CSS3, jQuery, Bootstrap, Material UI, AJAX, PHP, Java, C++, Python, Scheme, SQL, Sketch, GitHub, WebStorm, Atom, PyCharm, Slack, Trello.</div>
+              <div class="info-desc">JavaScript, React.js, React Native, HTML5, CSS3, jQuery, Bootstrap, Material UI, AJAX, PHP, Java, C++, Python, Scheme, SQL, Sketch, GitHub, WebStorm, Atom, Slack, Trello.</div>
             </div>
 
           </div>
@@ -91,7 +91,7 @@
         <section class="the-grid">
 
           <div class="portfolio-item " data-toggle="modal" data-target="#movieApp">
-            <img src="images/moviefinder.png" class="image img-responsive" alt>
+            <img src="images/moviethumbnail.png" class="image img-responsive" alt>
             <div class="filter">
               <div class="mask">
                 <div class="text">
@@ -104,7 +104,8 @@
             </div>
           </div>
           <div class=" portfolio-item" data-toggle="modal" data-target="#plantidentifier">
-            <img src="images/plantidentifier.png" class="img-responsive" alt>
+            <img src="images/plantapp.png" class="image img-responsive" alt>
+
             <div class="filter">
               <div class="mask">
                 <div class="text">
@@ -130,7 +131,7 @@
             </div>
           </div>
           <div class="portfolio-item " data-toggle="modal" data-target="#logApp">
-            <img src="images/logapp.png" class="image img-responsive" alt>
+            <img src="images/logappthumbnail.png" class="image img-responsive" alt>
             <div class="filter">
               <div class="mask">
                 <div class="text">
@@ -144,7 +145,7 @@
           </div>
 
           <div class="portfolio-item" data-toggle="modal" data-target="#vault">
-            <img src="images/vault.png" class="image img-responsive" alt>
+            <img src="images/vaultthumbnail.png" class="image img-responsive" alt>
             <div class="filter">
               <div class="mask">
                 <div class="text">
@@ -175,7 +176,6 @@
         </section>
 
         <div class="row text-center">
-
           <button class="btn btn-default" onclick="window.open('Joanitha-Resume.pdf')">Download Résumé</button>
         </div>
 
@@ -188,7 +188,7 @@
             <div class="sayhello">Say Hey 👋</div>
           </div>
           <div class="text-left">
-            <div class="contact-text">I'm currently looking for Fall'18 part-time internships. If you have a project I can work on, please feel free to contact me!</div>
+            <div class="contact-text">I'm currently looking for Fall'18 part-time internships. If you have a position for me or a project I can work on, please feel free to contact me!</div>
           </div>
           <div class="contact-text "><a class="emailid" href="mailto:joanitha.gomez@sjsu.edu">joanitha.gomez@sjsu.edu</a>
           </div>
@@ -240,8 +240,9 @@
 
   </div>
 
+  <!-- Modals -->
 
-  <!-- Modal -->
+  <!-- Modal1 -->
   <div class="modal fade" id="movieApp" role="dialog">
     <div class="modal-dialog">
       <!-- Modal content-->
@@ -265,19 +266,22 @@
           <hr>
         </div>
         <div class="modal-body container">
-          <div class="row wrap">
-            <img src="images/moviefinder.png" class="img img-responsive" alt="Screenshot of Movie finder app">
+          <div class="row">
+            <img src="images/moviefinder.png" class="modal-image img-responsive" alt="Screenshot of Movie finder app">
             <p class="modal-text">I designed and implemented this stress management web application to breathe through my hectic college schedule. </p>
-
             <p class="modal-text">Used: HTML5, CSS3, JavaScript, jQuery, Velocity.js, Codepen</p>
-
-            <a class="modal-text" href="https://joanithagomez.github.io/movie-finder/">https://joanithagomez.github.io/movie-finder/</a>
-
+            <div class="modal-subtitle">Link:
+              <a class="modal-text link" href="https://joanithagomez.github.io/movie-finder/">https://joanithagomez.github.io/movie-finder/</a>
+            </div>
           </div>
+          <!-- <div class="row">
+            <p class="modal-text">I designed and implemented this stress management web application to breathe through my hectic college schedule. </p>
+            <p class="modal-text">Used: HTML5, CSS3, JavaScript, jQuery, Velocity.js, Codepen</p>
+            <a class="modal-text" href="https://joanithagomez.github.io/movie-finder/">https://joanithagomez.github.io/movie-finder/</a>
+          </div> -->
         </div>
       </div>
     </div>
-  </div>
   </div>
   <!-- modal -->
 
@@ -303,22 +307,24 @@
               </svg>
           </div>
           <div class="modal-title">Plant Identifier Application</div>
-          <!-- <hr> -->
+          <hr>
         </div>
-        <div class="modal-body container">
+        <div class="modal-body container ">
 
-          <div class="row wrap">
+          <div class="row plantcontainer">
+            <div class="col-md-6 plant-desc">
+              <div class="modal-text planttext">The goal of this project was to build a mobile application that will instantly identify plants. We wanted to give our users an easy way to learn about plants and be more appreciative of the world around us. This app allows users to take
+                a picture and have it classified. After classifying, users have access to information about the plant and where to buy it. Through this application, our users can have fun classifying plants either by playing a guessing mini-game after
+                every plant they identify or playing competitively with other users. <br> Used: React Native, Tensorflow, Firebase, Native Base, Expo, MediaWiki
+              </div>
+            </div>
 
-            <p class="modal-text">Used: React Native, Tensorflow, Firebase, Native Base, Expo, MediaWiki</p>
-
-            <div class="img-container"> <img src="images/logapp2.png" class="modal-image img-responsive" alt></div>
-            <p class="modal-desc"></p>
-
+            <div class="col-md-6">
+              <img src="images/homepage.png" class="modal-image img-responsive" alt>
+            </div>
           </div>
         </div>
-        <!-- <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          </div> -->
+
       </div>
 
     </div>
@@ -348,15 +354,18 @@
           <div class="modal-title">Information Technology Services</div>
           <hr>
         </div>
-        <div class="modal-body container">
-          <div class="row wrap">
-            <img src="images/logapp.png" class="modal-image img-responsive" alt="its image">
-
-            <p class="modal-text">I worked with a team of 3 to help ITS(SJSU) redesign their website. We interviewed faculty and students at SJSU, performed surveys, conducted usability tests and submitted proposals based on our research and surveys.
+        <div class="modal-body container ">
+          <div class="col-md-6 ">
+            <div class="img-container">
+              <img src="images/logapp.png" class=" modal-image img-responsive" alt="its image">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <p class="modal-text">The premise of this project was to find issues and points of improvement on the San Jose State University IT Service Website, so that ITS can work towards their goal of creating an engaging SJSU community and enhancing student success. I interviewed
+              faculty and students at SJSU, performed surveys with my team, conducted usability tests and finally submitted proposals based on our research and surveys. We received positive feedback from our client and I was fortunate to win the Employer's
+              choice award for my work in the project.
             </p>
-
-            <p class="modal-text">Used: HTML, Content Management System, Adobe Spark, Google Sheets</p>
-
+            <p class="modal-text">Used: HTML, Content Management System, Google Analytics, Adobe Spark</p>
           </div>
         </div>
       </div>
@@ -395,11 +404,11 @@
 
             <p class="modal-text">I worked with a team of 5 to develop this application that analyzes syslog files and visualizes the data in it. Users can register and upload files to analyse the logs in the files. </p>
 
-            <h4 class="modal-subtitle">Used:</h4>
             <p class="modal-text">ReactJS, Google Charts, PHP, Sketch</p>
 
-            <h4 class="modal-subtitle">Link:</h4>
-            <a class="modal-text" href="https://github.com/joanithagomez/Log-Analytics-App">https://github.com/joanithagomez/Log-Analytics-App</a>
+            <div class="modal-subtitle">Link:
+              <a class="modal-text link" href="https://github.com/joanithagomez/Log-Analytics-App">https://github.com/joanithagomez/Log-Analytics-App</a>
+            </div>
           </div>
         </div>
       </div>
@@ -438,8 +447,10 @@
             <p class="modal-text">I worked with a team of 5 to develop this application that analyzes syslog files and visualizes the data in it. Users can register and upload files to analyse the logs in the files. </p>
             <p class="modal-text">Used: ReactJS, create-react-app, Sketch</p>
 
-            <h4 class="modal-subtitle">Link:</h4>
-            <a class="modal-text" href="https://joanithagomez.github.io/projects/vault/">https://joanithagomez.github.io/projects/vault/</a>
+            <div class="modal-subtitle">Link:
+              <div class="modal-text"><a class="link " href="https://joanithagomez.github.io/projects/vault/">https://joanithagomez.github.io/projects/vault/</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -469,22 +480,19 @@
               </svg>
           </div>
           <div class="modal-title">Calendar</div>
-          <!-- <hr> -->
         </div>
         <div class="modal-body container">
 
-          <div class="row ">
+          <div class="row modal-image">
             <video id="myVideo" autoplay muted loop>
               <source src="images/calendar.mp4" type="video/mp4">
               <source src="images/calendar.ogg" type="video/ogg">
               Your browser does not support the video tag.
             </video>
-            <p class="modal-desc">I built a Calendar similar to Google Calendar using Java and MVC pattern. Users can add events on </p>
+            <p class="modal-text">I built a Calendar similar to Google Calendar using Java and Model-View-Controller pattern. Users can create and delete events, set a start and end time, and save the events to look up later. </p>
 
           </div>
-          <!-- <footer class="modal-footer">
-          <div class="footer">Handmade with love</div>
-        </footer> -->
+
         </div>
 
       </div>
