About me modified

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
             <div class="intro">
               <div class="hello"><span class="muted-text">Hi, I'm </span></div>
               <div class="name">Joanitha Christle.</div>
-              <p class="introtext">Front end Developer and CS Major</p>
+              <p class="introtext">Frontend Developer and Application Engineer</p>
             </div>
           </div>
         </div>
       </div>
-
 
 
       <div class="about" id="aboutme">
@@ -46,7 +45,6 @@
         </div>
 
         <div class="row ">
-
           <div class="row headshot-row">
             <div class="col-md-12 headshot-box">
               <div class="headshot text-center"><img class="img-responsive" src="images/headshot.jpeg" alt="Joanitha's headshot"></div>
@@ -55,27 +53,29 @@
           <div class="col-md-6 left">
             <div class="info-box">
               <div class="info-title">Me</div>
-              <div class="info-desc">I'm currently a senior at San José State University pursuing my B.S degree in Computer Science. I expect to graduate in December 2018. I taught myself frontend programming by doing side projects during breaks. </div>
+              <div class="info-desc">I'm currently a senior at San José State University pursuing my B.S degree in Computer Science. I'm expected to graduate in December 2018. <br><br>I have an interest in UI/UX design and I completed the Design101 course at Designlab focussing
+                in the fundumentals of UI design. I also taught myself frontend programming by doing side projects during my breaks. </div>
             </div>
-            <!--
-            <div class="info-box">
+
+            <!-- <div class="info-box">
               <div class="info-title">Education</div>
-              <div class="info-desc">I'm currently a senior at San José State University pursuing my B.S degree in Computer Science. I expect to graduate in December 2018.</div>
+              <div class="info-desc">I'm currently a senior at San José State University pursuing my B.S degree in Computer Science. I'm expected to graduate in December 2018.
+                <br><br> I also completed a Design101 course at Designlab focussing in fundumentals of UI design with 1-on-1 mentoring and hands-on practice using Sketch app.
+              </div>
             </div> -->
+
+          </div>
+          <div class="col-md-6 right">
+            <div class="info-box">
+              <div class="info-title">Skills</div>
+              <div class="info-desc">JavaScript, React.js, React Native, HTML5, CSS3, jQuery, Bootstrap, Material UI, AJAX, PHP, Java, C++, Python, Scheme, SQL, Firebase. <br><br> Tools: GitHub, Chrome Dev Tools, Sketch, WebStorm, Atom, Slack, Trello.</div>
+            </div>
 
             <div class="info-box">
               <div class="info-title">Contact</div>
               <div class="info-desc">Email: joanitha.gomez@sjsu.edu</div>
 
             </div>
-
-          </div>
-          <div class="col-md-6 right">
-            <div class="info-box">
-              <div class="info-title">Skills</div>
-              <div class="info-desc">JavaScript, React.js, React Native, HTML5, CSS3, jQuery, Bootstrap, Material UI, AJAX, PHP, Java, C++, Python, Scheme, SQL, Sketch, GitHub, WebStorm, Atom, Slack, Trello.</div>
-            </div>
-
           </div>
 
         </div>
