project update -completed version

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="col-md-6 left">
             <div class="info-box">
               <div class="info-title">Me</div>
-              <div class="info-desc">I'm currently a senior at San José State University pursuing my B.S degree in Computer Science. I'm expected to graduate in December 2018. <br><br>I have an interest in UI/UX design and I completed the Design101 course at Designlab focussing
+              <div class="info-desc">I'm currently a senior at San José State University pursuing my B.S degree in Computer Science. I'm expected to graduate in December 2018. <br><br>I have an interest in UI/UX design and I completed a Design101 course at Designlab focussing
                 in the fundumentals of UI design. I also taught myself frontend programming by doing side projects during my breaks. </div>
             </div>
 
@@ -270,9 +270,7 @@
             <img src="images/moviefinder.png" class="modal-image img-responsive" alt="Screenshot of Movie finder app">
             <p class="modal-text">I designed and implemented this stress management web application to breathe through my hectic college schedule. </p>
             <p class="modal-text">Used: HTML5, CSS3, JavaScript, jQuery, Velocity.js, Codepen</p>
-            <div class="modal-subtitle">Link:
-              <a class="modal-text link" href="https://joanithagomez.github.io/movie-finder/">https://joanithagomez.github.io/movie-finder/</a>
-            </div>
+            <a class="modal-text link" href="https://joanithagomez.github.io/movie-finder/">https://joanithagomez.github.io/movie-finder/</a>
           </div>
           <!-- <div class="row">
             <p class="modal-text">I designed and implemented this stress management web application to breathe through my hectic college schedule. </p>
@@ -280,6 +278,8 @@
             <a class="modal-text" href="https://joanithagomez.github.io/movie-finder/">https://joanithagomez.github.io/movie-finder/</a>
           </div> -->
         </div>
+        <div class="modal-footer"></div>
+
       </div>
     </div>
   </div>
@@ -317,6 +317,7 @@
                 a picture and have it classified. After classifying, users have access to information about the plant and where to buy it. Through this application, our users can have fun classifying plants either by playing a guessing mini-game after
                 every plant they identify or playing competitively with other users. <br> Used: React Native, Tensorflow, Firebase, Native Base, Expo, MediaWiki
               </div>
+              <a class="modal-text link" href="https://github.com/joanithagomez/plant-identifier">https://github.com/joanithagomez/plant-identifier</a>
             </div>
 
             <div class="col-md-6">
@@ -324,7 +325,7 @@
             </div>
           </div>
         </div>
-
+        <div class="modal-footer"></div>
       </div>
 
     </div>
@@ -354,13 +355,13 @@
           <div class="modal-title">Information Technology Services</div>
           <hr>
         </div>
-        <div class="modal-body container ">
-          <div class="col-md-6 ">
-            <div class="img-container">
-              <img src="images/logapp.png" class=" modal-image img-responsive" alt="its image">
+        <div class=" modal-body container ">
+          <div class="col-md-12">
+            <div class="laptop-wrapper">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/mcyHLn8I2tE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-12">
             <p class="modal-text">The premise of this project was to find issues and points of improvement on the San Jose State University IT Service Website, so that ITS can work towards their goal of creating an engaging SJSU community and enhancing student success. I interviewed
               faculty and students at SJSU, performed surveys with my team, conducted usability tests and finally submitted proposals based on our research and surveys. We received positive feedback from our client and I was fortunate to win the Employer's
               choice award for my work in the project.
@@ -368,6 +369,7 @@
             <p class="modal-text">Used: HTML, Content Management System, Google Analytics, Adobe Spark</p>
           </div>
         </div>
+        <div class="modal-footer"></div>
       </div>
     </div>
   </div>
@@ -406,11 +408,10 @@
 
             <p class="modal-text">ReactJS, Google Charts, PHP, Sketch</p>
 
-            <div class="modal-subtitle">Link:
-              <a class="modal-text link" href="https://github.com/joanithagomez/Log-Analytics-App">https://github.com/joanithagomez/Log-Analytics-App</a>
-            </div>
+            <a class="modal-text link" href="https://github.com/joanithagomez/Log-Analytics-App">https://github.com/joanithagomez/Log-Analytics-App</a>
           </div>
         </div>
+        <div class="modal-footer"></div>
       </div>
     </div>
   </div>
@@ -447,12 +448,12 @@
             <p class="modal-text">I worked with a team of 5 to develop this application that analyzes syslog files and visualizes the data in it. Users can register and upload files to analyse the logs in the files. </p>
             <p class="modal-text">Used: ReactJS, create-react-app, Sketch</p>
 
-            <div class="modal-subtitle">Link:
-              <div class="modal-text"><a class="link " href="https://joanithagomez.github.io/projects/vault/">https://joanithagomez.github.io/projects/vault/</a>
-              </div>
-            </div>
+            <a class="modal-text link" href="https://joanithagomez.github.io/projects/vault/">https://joanithagomez.github.io/projects/vault/</a>
+
           </div>
         </div>
+        <div class="modal-footer"></div>
+
       </div>
     </div>
   </div>
@@ -494,6 +495,8 @@
           </div>
 
         </div>
+        <div class="modal-footer"></div>
+
 
       </div>
     </div>
