--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
               <div class="mask">
                 <div class="text">
                   <span>
-                                <div class="heading">Movie Finder</div>
-                              <div class="desc">I worked on the front-end of this application and used ReactJS, Axios and Google Charts. </div>
-                            </span>
+                        <div class="heading">Movie Finder</div>
+                        <div class="desc">A simple movie look-up application. </div>
+                      </span>
                 </div>
               </div>
             </div>
@@ -268,8 +268,8 @@
         <div class="modal-body container">
           <div class="row">
             <img src="images/moviefinder.png" class="modal-image img-responsive" alt="Screenshot of Movie finder app">
-            <p class="modal-text">I designed and implemented this stress management web application to breathe through my hectic college schedule. </p>
-            <p class="modal-text">Used: HTML5, CSS3, JavaScript, jQuery, Velocity.js, Codepen</p>
+            <p class="modal-text"> I designed and implemented this simple application as a personal project. The app will let users to look-up movies and make a list of favorites to share with their friends! </p>
+            <p class="modal-text">Used: ReactJS, themoviedb API, create-react-app, Firebase</p>
             <a class="modal-text link" href="https://joanithagomez.github.io/movie-finder/">https://joanithagomez.github.io/movie-finder/</a>
           </div>
           <!-- <div class="row">
@@ -445,8 +445,10 @@
           <div class="row wrap">
             <img src="images/vault.png" class="modal-image img-responsive" alt>
 
-            <p class="modal-text">I worked with a team of 5 to develop this application that analyzes syslog files and visualizes the data in it. Users can register and upload files to analyse the logs in the files. </p>
-            <p class="modal-text">Used: ReactJS, create-react-app, Sketch</p>
+            <p class="modal-text">Vault is an easy-to-use password generator inspired by James Coglan ( <a href="https://getvau.lt/">https://getvau.lt/ </a>). I implemented a simplified version that is also responsive and easy-to-use for mobile users. <br><br>The app is built
+              with the goal of discouraging users from reusing same passwords for different sites. This app lets users have one master password and use the service name they are logging into to generate a unique password for that service. Next time you
+              need to log in, come back here to get your password! </p>
+            <p class="modal-text">Used: ReactJS, create-react-app, npm, Sketch</p>
 
             <a class="modal-text link" href="https://joanithagomez.github.io/projects/vault/">https://joanithagomez.github.io/projects/vault/</a>
 
