vault link updated

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
               <div class="mask">
                 <div class="text">
                   <span>
-                                  <div class="heading">Plant Identifier</div>
-                                <div class="desc">I worked with a team to develop mancala board game using Java and GUI programming skills. </div>
-                              </span>
+                            <div class="heading">Plant Identifier</div>
+                          <div class="desc">I worked with a team to develop mancala board game using Java and GUI programming skills. </div>
+                        </span>
                 </div>
               </div>
             </div>
@@ -268,7 +268,7 @@
         <div class="modal-body container">
           <div class="row">
             <img src="images/moviefinder.png" class="modal-image img-responsive" alt="Screenshot of Movie finder app">
-            <p class="modal-text"> I designed and implemented this simple application as a personal project. The app will let users to look-up movies and make a list of favorites to share with their friends! </p>
+            <p class="modal-text"> I designed and implemented this simple application as a personal project. The app will let users look-up movies and make a list of favorites to share with their friends! </p>
             <p class="modal-text">Used: ReactJS, themoviedb API, create-react-app, Firebase</p>
             <a class="modal-text link" href="https://joanithagomez.github.io/movie-finder/">https://joanithagomez.github.io/movie-finder/</a>
           </div>
@@ -450,7 +450,7 @@
               need to log in, come back here to get your password! </p>
             <p class="modal-text">Used: ReactJS, create-react-app, npm, Sketch</p>
 
-            <a class="modal-text link" href="https://joanithagomez.github.io/projects/vault/">https://joanithagomez.github.io/projects/vault/</a>
+            <a class="modal-text link" href="https://joanithagomez.github.io/Vault-App/">https://joanithagomez.github.io/Vault-App/</a>
 
           </div>
         </div>
