Minor text fixes

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="text">
                   <span>
                             <div class="heading">Plant Identifier</div>
-                          <div class="desc">I worked with a team to develop mancala board game using Java and GUI programming skills. </div>
+                          <div class="desc">A mobile application to identify plants. </div>
                         </span>
                 </div>
               </div>
@@ -124,7 +124,7 @@
                 <div class="text">
                   <span>
                                 <div class="heading">Information Technology Services</div>
-                              <div class="desc">My team and I worked with ITS to redesign their website and make it more user-friendly. </div>
+                              <div class="desc">A research project to redesign ITS's website and make it more user-friendly. </div>
                             </span>
                 </div>
               </div>
@@ -137,7 +137,7 @@
                 <div class="text">
                   <span>
                                 <div class="heading">Log Analytics</div>
-                              <div class="desc">I worked on the front-end of this application and used ReactJS, Axios and Google Charts. </div>
+                              <div class="desc">A data visualization and analytics application.</div>
                             </span>
                 </div>
               </div>
@@ -364,7 +364,7 @@
           <div class="col-md-12">
             <p class="modal-text">The premise of this project was to find issues and points of improvement on the San Jose State University IT Service Website, so that ITS can work towards their goal of creating an engaging SJSU community and enhancing student success. I interviewed
               faculty and students at SJSU, performed surveys with my team, conducted usability tests and finally submitted proposals based on our research and surveys. We received positive feedback from our client and I was fortunate to win the Employer's
-              choice award for my work in the project.
+              choice award for my contribution in the project.
             </p>
             <p class="modal-text">Used: HTML, Content Management System, Google Analytics, Adobe Spark</p>
           </div>
@@ -406,7 +406,7 @@
 
             <p class="modal-text">I worked with a team of 5 to develop this application that analyzes syslog files and visualizes the data in it. Users can register and upload files to analyse the logs in the files. </p>
 
-            <p class="modal-text">ReactJS, Google Charts, PHP, Sketch</p>
+            <p class="modal-text">Used: ReactJS, Google Charts, PHP, Sketch</p>
 
             <a class="modal-text link" href="https://github.com/joanithagomez/Log-Analytics-App">https://github.com/joanithagomez/Log-Analytics-App</a>
           </div>
