--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
           <div class="row wrap">
             <img src="images/vault.png" class="modal-image img-responsive" alt>
 
-            <p class="modal-text">Vault is an easy-to-use password generator inspired by James Coglan ( <a href="https://getvau.lt/">https://getvau.lt/ </a>). I implemented a simplified version that is also responsive and easy-to-use for mobile users. <br><br>The app is built
+            <p class="modal-text">Vault is an easy-to-use password generator inspired from James Coglan's Vault ( <a href="https://getvau.lt/">https://getvau.lt/ </a>). I implemented a simplified version that is responsive and easy-to-use for mobile users. <br><br>The app is built
               with the goal of discouraging users from reusing same passwords for different sites. This app lets users have one master password and use the service name they are logging into to generate a unique password for that service. Next time you
               need to log in, come back here to get your password! </p>
             <p class="modal-text">Used: ReactJS, create-react-app, npm, Sketch</p>
