--- a/index.html
+++ b/index.html
@@ -56,25 +56,15 @@
               <div class="info-desc">I'm currently a senior at San José State University pursuing my B.S degree in Computer Science. I'm expected to graduate in December 2018. <br><br>I have an interest in UI/UX design and I completed a Design101 course at Designlab focussing
                 in the fundumentals of UI design. I also taught myself frontend programming by doing side projects during my breaks. </div>
             </div>
-
-            <!-- <div class="info-box">
-              <div class="info-title">Education</div>
-              <div class="info-desc">I'm currently a senior at San José State University pursuing my B.S degree in Computer Science. I'm expected to graduate in December 2018.
-                <br><br> I also completed a Design101 course at Designlab focussing in fundumentals of UI design with 1-on-1 mentoring and hands-on practice using Sketch app.
-              </div>
-            </div> -->
-
           </div>
           <div class="col-md-6 right">
             <div class="info-box">
               <div class="info-title">Skills</div>
               <div class="info-desc">JavaScript, React.js, React Native, HTML5, CSS3, jQuery, Bootstrap, Material UI, AJAX, PHP, Java, C++, Python, Scheme, SQL, Firebase. <br><br> Tools: GitHub, Chrome Dev Tools, Sketch, WebStorm, Atom, Slack, Trello.</div>
             </div>
-
             <div class="info-box">
               <div class="info-title">Contact</div>
               <div class="info-desc">Email: joanitha.gomez@sjsu.edu</div>
-
             </div>
           </div>
 
@@ -188,7 +178,7 @@
             <div class="sayhello">Say Hey 👋</div>
           </div>
           <div class="text-left">
-            <div class="contact-text">I'm currently looking for Fall'18 part-time internships. If you have a position for me or a project I can work on, please feel free to contact me!</div>
+            <div class="contact-text">I'm currently looking for full-time web developer positions. If you have an opportunity, please feel free to contact me!</div>
           </div>
           <div class="contact-text "><a class="emailid" href="mailto:joanitha.gomez@sjsu.edu">joanitha.gomez@sjsu.edu</a>
           </div>
