--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="overlay row">
           <div class="col-lg-11 col-lg-offset-1 intro-row">
             <div class="intro">
-              <div class="hello"><span class="muted-text">Hi, I'm </span></div>
-              <div class="name">Joanitha Christle.</div>
-              <p class="introtext">Frontend Developer and Application Engineer</p>
+              <h3 class="hello"><span class="muted-text">Hi, I'm </span></h3>
+              <h1 class="name">Joanitha Christle.</h2>
+              <p class="introtext">Junior Frontend Developer</p>
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
           <div class="col-md-6 right">
             <div class="info-box">
               <div class="info-title">Skills</div>
-              <div class="info-desc">JavaScript, React.js, React Native, HTML5, CSS3, jQuery, Bootstrap, Material UI, AJAX, PHP, Java, C++, Python, Scheme, SQL, Firebase. <br><br> Tools: GitHub, Chrome Dev Tools, Sketch, WebStorm, Atom, Slack, Trello.</div>
+              <div class="info-desc">JavaScript, React.js, React Native, HTML5, CSS3, jQuery, Bootstrap, Material UI, AJAX, PHP, Java, C++, Python, Scheme, SQL, Firebase. <br><br> Tools: GitHub, Chrome Dev Tools, Sketch, JIRA.</div>
             </div>
             <div class="info-box">
               <div class="info-title">Contact</div>
@@ -166,7 +166,7 @@
         </section>
 
         <div class="row text-center">
-          <button class="btn btn-default" onclick="window.open('JoanithaResume.pdf')">Download Résumé</button>
+          <button class="btn btn-default" onclick="window.open('Joanitha-Resume.pdf')">Download Résumé</button>
         </div>
 
       </div>
