--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="col-md-6 right">
             <div class="info-box">
               <div class="info-title">Skills</div>
-              <div class="info-desc">JavaScript, React.js, React Native, HTML5, CSS3, jQuery, Bootstrap, Material UI, AJAX, PHP, Java, C++, Python, Scheme, SQL, Firebase. <br><br> Tools: GitHub, Chrome Dev Tools, Sketch, JIRA.</div>
+              <div class="info-desc">JavaScript, React.js, React Native, HTML5, CSS3, jQuery, Bootstrap, Material UI, AJAX, PHP, Java, C++, Python, SQL, Firebase. <br><br> Tools: GitHub, Chrome Dev Tools, Sketch, JIRA.</div>
             </div>
             <div class="info-box">
               <div class="info-title">Contact</div>
