--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <meta name="theme-color" media="(prefers-color-scheme: light dark)" /> -->
   <title>Joanitha | Frontend Developer</title>
 
@@ -74,7 +73,7 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav m-auto mb-2 mb-lg-0">
           <li class="nav-item"><a href="index.html">home</a></li>
-          <li class="nav-item"><a href="index.html">about</a></li>
+          <li class="nav-item"><a href="#about">about</a></li>
           <li class="nav-item"><a href="#portfolio">portfolio</a></li>
           <li class="nav-item"><a href="#contact">contact</a></li>
           <li class="nav-item"><a href onclick="window.open('JoanithaResume.pdf')">download resumé</a></li>
@@ -303,21 +302,20 @@
       
     </div>
   </section>
+  <div class="row contact" data-aos="fade-up" data-aos-duration="1500">
+      <div class="title">Say Hey 👋</div>
+      <div class="contact-text">I'm currently looking for full-time Frontend Developer positions. If you have an opportunity, please feel free to contact me!
+        <br/>
+        <br/>
+        <a class="emailid" href="mailto:joanitha.c.gomez@gmail.com">joanitha.c.gomez@gmail.com</a>
+      </div>
+  </div>
 </main>
 <footer id="contact">
-    <div class="row text-center" data-aos="fade-up" data-aos-duration="1500">
-        <div class="title">Say Hey 👋</div>
-        <div class="contact-text">I'm currently looking for full-time Frontend Developer positions. If you have an opportunity, please feel free to contact me!
-          <br/>
-          <br/>
-          <a class="emailid" href="mailto:joanitha.c.gomez@gmail.com">joanitha.c.gomez@gmail.com</a>
-        </div>
-    </div>
     <div class="footer text-center">
         Handmade by <a href="#home">Joanitha Gomez</a>
         <br/>HTML5 | CSS3 | JavaScript | Bootstrap
     </div>
- 
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
