--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <!-- <meta name="theme-color" media="(prefers-color-scheme: light dark)" /> -->
   <title>Joanitha | Frontend Developer</title>
 
-  <link rel="icon" href="images/headshot.jpeg" />
+  <link rel="icon" href="assets/memoji.png" />
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Lato:300,400,700,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- <link rel="stylesheet" href="css/dark.css" media="(prefers-color-scheme: dark)" /> -->
   <!-- <link
@@ -22,8 +21,6 @@
   <link rel="stylesheet" href="css/style.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.ui.min.js"></script>
   <!-- <script>
     // If `prefers-color-scheme` is not supported, fall back to light mode.
     // In this case, light.css will be downloaded with `highest` priority.
