fix styling and accessibility

--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
           </div>
 
           <div class="icons">
-            <a class="icon-item emailid" href="mailto:joanitha.c.gomez@gmail.com">
+            <a class="icon-item emailid" href="mailto:joanitha.c.gomez@gmail.com" aria-label="Send email">
                 <img src="assets/mail.svg" alt=""/>
             </a>
-            <a target="_blank" href="https://www.linkedin.com/in/joanitha-christle-gomez/" class="icon-item linkedin-icon">
+            <a target="_blank" href="https://www.linkedin.com/in/joanitha-christle-gomez/" aria-label="Visit linkedin profile" class="icon-item linkedin-icon">
                   <img src="assets/linkedin.svg" alt=""/>
             </a>
     
-            <a target="_blank" href="https://github.com/joanithagomez" class="icon-item github-icon">
+            <a target="_blank" href="https://github.com/joanithagomez" aria-label="Visit github profile" class="icon-item github-icon">
               <img src="assets/github.svg"/ alt="">
             </a>
           </div>
@@ -169,9 +169,9 @@
             <h2>Certifications</h2>
             <div class="certifications">
               <div class="certification-item">
-                <img src="https://assets.algoexpert.io/static/images/ae-social-logo-twitter.png"/ width="24">
+                <img src="https://assets.algoexpert.io/static/images/ae-social-logo-twitter.png"/ alt="" width="24">
                 <div>
-                  <h6><a href="https://certificate.algoexpert.io/FrontendExpert%20Certificate%20FE-b06250ed3b" target="_blank">Frontend Development by AlgoExpert</a></h6>
+                  <p class="mb-0"><a href="https://certificate.algoexpert.io/FrontendExpert%20Certificate%20FE-b06250ed3b" target="_blank">Frontend Development by AlgoExpert</a></p>
                 </div>
               </div>
             </div>
