--- a/index.html
+++ b/index.html
@@ -194,9 +194,7 @@
               <h2 class="card-title">Vault Application</h2>
               <p class="card-subtitle">A password generator built using ReactJS.</p>
               <p class="card-text">
-                Vault is an easy-to-use password generator inspired from James Coglan's Vault ( <a href="https://getvau.lt/">https://getvau.lt/ </a>). I implemented a simplified version that is responsive and easy-to-use for mobile users. <br><br>The app is built
-              with the goal of discouraging users from reusing same passwords for different sites. This app lets users have one master password and use the service name they are logging into to generate a unique password for that service. Next time you
-              need to log in, come back here to get your password!</p>
+                Vault is an easy-to-use password generator inspired from James Coglan's Vault ( <a href="https://getvau.lt/">https://getvau.lt/ </a>). <br/>I developed a mobile-friendly version of the app for a seamless user experience. The app aims to prevent users from reusing passwords across multiple sites. By entering a single master password and the name of the service, it generates a unique password for the specific site. When users need to log in again, they can simply return to the app to retrieve their password.</p>
                 <div class="skill">
                   <div class="skill-item">ReactJS</div>
                   <div class="skill-item">create-react-app</div>
