--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="card" data-aos="fade-up" data-aos-duration="1000">
           <div class="card-body row">
             <div class="col card-img d-lg-block d-none">
-              <img src="images/homepage.png">
+              <img src="images/homepage.png" alt="Mobile screenshot of plant identifier app">
             </div>
             <div class="col card-content">
               <h2 class="card-title">Plant Identifier</h2>
@@ -298,11 +298,10 @@
       </div>
     </section>
     <div class="row contact" data-aos="fade-up" data-aos-duration="1500">
-        <div class="title">Say Hey 👋</div>
+        <h2>Say Hey 👋</h2>
         <div class="contact-text">Interested in building something together? Feel free to contact me!
           <br/>
-          <br/>
-          <a class="emailid" href="mailto:joanitha.c.gomez@gmail.com">joanitha.c.gomez@gmail.com</a>
+          <a class="emailid" href="mailto:jochristleg@gmail.com">jochristleg@gmail.com</a>
         </div>
     </div>
   </main>
